# library_api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  library.db
migrations/: 20250615232438_create_books.up.sql
src/: error.rs  lib.rs  main.rs
src/app/: book_repository.rs  mod.rs
src/config/: mod.rs
src/domain/: book.rs
src/handlers/: auth_handler.rs  book_handler.rs  mod.rs
src/infra/: mod.rs  sqlite_book_repository.rs
src/middleware/: auth.rs  mod.rs
tests/: integration.rs
