[package]
name = "library_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
jsonwebtoken = "7"
headers = "0.3"               # para extraer Authorization

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio    = { version = "1.38", features = ["macros", "rt"] }
sqlx     = { version = "0.7", features = ["sqlite", "macros"] }
once_cell = "1.17"
